[project]
name = "open-unlearning"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "accelerate==0.34.2",
    "bitsandbytes==0.44.1",
    "datasets==3.0.1",
    "deepspeed==0.15.4",
    "huggingface-hub==0.29.1",
    "hydra-colorlog==1.2.0",
    "hydra-core==1.3",
    "numpy==2.2.3",
    "rouge-score==0.1.2",
    "scikit-learn==1.5.2",
    "scipy==1.14.1",
    "tensorboard==2.18.0",
    "torch==2.4.1",
    "transformers==4.45.1",
    "flash-attn==2.6.3",
    "lm-eval==0.4.8",
    "peft==0.17.1",
]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.6.3"
requires-dist = ["torch", "einops"]

[tool.uv.extra-build-dependencies]
flash-attn = [{ requirement = "torch", match-runtime = true }]

[tool.uv.extra-build-variables]
flash-attn = { FLASH_ATTENTION_SKIP_CUDA_BUILD = "TRUE" }
